compiler/tools/fpp-check/test/redef/constant_state_machine.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef/constant_state_machine.fpp:3.1
state machine S
^
error: redefinition of symbol S
previous definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef/constant_state_machine.fpp:1.1
constant S = 0
^
